tests/ui/parser/require-parens-for-chained-comparison.stderr
error: comparison operators cannot be chained
  --> $DIR/require-parens-for-chained-comparison.rs:2:11
   |
LL |     false == false == false;
   |           ^^       ^^
   |
help: split the comparison into two
   |
LL |     false == false && false == false;
   |                    ++++++++

error: comparison operators cannot be chained
  --> $DIR/require-parens-for-chained-comparison.rs:6:11
   |
LL |     false == 0 < 2;
   |           ^^   ^
   |
help: parenthesize the comparison
   |
LL |     false == (0 < 2);
   |              +     +

error: comparison operators cannot be chained
  --> $DIR/require-parens-for-chained-comparison.rs:10:6
   |
LL |     f<X>();
   |      ^ ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     f::<X>();
   |      ++

error: comparison operators cannot be chained
  --> $DIR/require-parens-for-chained-comparison.rs:16:6
   |
LL |     f<Result<Option<X>, Option<Option<X>>>(1, 2);
   |      ^      ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     f::<Result<Option<X>, Option<Option<X>>>(1, 2);
   |      ++

error: expected one of `!`, `.`, `::`, `;`, `?`, `else`, `{`, or an operator, found `,`
  --> $DIR/require-parens-for-chained-comparison.rs:21:17
   |
LL |     let _ = f<u8, i8>();
   |                 ^ expected one of 8 possible tokens
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     let _ = f::<u8, i8>();
   |              ++

error: invalid label name `'_`
  --> $DIR/require-parens-for-chained-comparison.rs:25:15
   |
LL |     let _ = f<'_, i8>();
   |               ^^

error: expected `while`, `for`, `loop` or `{` after a label
  --> $DIR/require-parens-for-chained-comparison.rs:25:17
   |
LL |     let _ = f<'_, i8>();
   |                 ^ expected `while`, `for`, `loop` or `{` after a label
   |
help: add `'` to close the char literal
   |
LL |     let _ = f<'_', i8>();
   |                 +

error: expected one of `.`, `:`, `;`, `?`, `else`, `for`, `loop`, `while`, or an operator, found `,`
  --> $DIR/require-parens-for-chained-comparison.rs:25:17
   |
LL |     let _ = f<'_, i8>();
   |                 ^ expected one of 9 possible tokens
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     let _ = f::<'_, i8>();
   |              ++

error: invalid label name `'_`
  --> $DIR/require-parens-for-chained-comparison.rs:32:7
   |
LL |     f<'_>();
   |       ^^

error: expected `while`, `for`, `loop` or `{` after a label
  --> $DIR/require-parens-for-chained-comparison.rs:32:9
   |
LL |     f<'_>();
   |         ^ expected `while`, `for`, `loop` or `{` after a label
   |
help: add `'` to close the char literal
   |
LL |     f<'_'>();
   |         +

error: comparison operators cannot be chained
  --> $DIR/require-parens-for-chained-comparison.rs:32:6
   |
LL |     f<'_>();
   |      ^  ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     f::<'_>();
   |      ++

error: comparison operators cannot be chained
  --> $DIR/require-parens-for-chained-comparison.rs:39:14
   |
LL |     let _ = f<u8>;
   |              ^  ^
   |
   = help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   = help: or use `(...)` if you meant to specify fn arguments

error[E0412]: cannot find type `X` in this scope
  --> $DIR/require-parens-for-chained-comparison.rs:10:7
   |
LL |     f<X>();
   |       ^ not found in this scope

error[E0425]: cannot find function `f` in this scope
  --> $DIR/require-parens-for-chained-comparison.rs:10:5
   |
LL |     f<X>();
   |     ^ not found in this scope

error[E0425]: cannot find function `f` in this scope
  --> $DIR/require-parens-for-chained-comparison.rs:16:5
   |
LL |     f<Result<Option<X>, Option<Option<X>>>(1, 2);
   |     ^ not found in this scope

error: aborting due to 15 previous errors

Some errors have detailed explanations: E0412, E0425.
For more information about an error, try `rustc --explain E0412`.
